# nano-crucible

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: Test Version Check  docs.yml  manual-publish-to-pypi.yml  publish-to-pypi.yml  test-version-check.yml
api-reference/client/: index.html
api-reference/datasets/: index.html
api-reference/graphs/: index.html
api-reference/instruments/: index.html
api-reference/models/: index.html
api-reference/projects/: index.html
api-reference/samples/: index.html
api-reference/users/: index.html
cli/: index.html
cli/reference/: index.html
concepts/: index.html
crucible/: __init__.py  client.py  constants.py  models.py  pycrucible.py  utils.py
crucible/cast/: __init__.py  builder.py  executor.py  loader.py  models.py
crucible/cli/: DISPLAY_GUIDE.md  README.md  __init__.py  __main__.py  cache.py  cast.py  config.py  dataset.py  deletion.py  download.py  edit.py  file.py  get.py  helpers.py  instrument.py  keybindings.py  link.py  open.py  project.py  qr.py  sample.py  schema.py  shell.py  status.py  term.py  tree.py  unlink.py  upload.py  user.py  whoami.py
crucible/config/: __init__.py  config.py
crucible/parsers/: README.md  __init__.py  base.py  emdvelox.py  lammps.py  maten_manager.py  maten_parent.py  maten_run.py  matensemble.py
crucible/resources/: __init__.py  base.py  datasets.py  (+7 more)
docs/: MDNoteParser.md  cast.md  concepts.md  index.md  installation.md  integrations.md  quickstart.md
examples/: README.md  crucible_project_management.ipynb  crucible_tutorial.ipynb  mdnote_example.py  sample_note.md  test_acl_endpoints.py  test_new_endpoints.py  test_schema_changes.py
installation/: index.html
integrations/: index.html
pycrucible/: pycrucible.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tutorial-notebooks/: add-users-example.ipynb  download-datasets.ipynb  explore-datasets-and-samples.ipynb  getting-started.ipynb  linking-datasets.ipynb
(+48 files in other folders)
